# vpbrt

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: Camera.cpp  Camera.hpp  Chemin.cpp  Chemin.hpp  graphique.cpp  graphique.hpp  interactions.cpp  interactions.hpp  lecture  lecture.cpp  viewpoint.hpp  vpbrt.cpp
src/Geometry/: BoundingBox.hpp  Cylindre.cpp  Cylindre.hpp  Matrice4x4.cpp  Matrix4x4.hpp  Mesh.cpp  Mesh.hpp  Objet.cpp  Objet.hpp  Scene.cpp  Scene.hpp  transform.cpp  transform.h
src/IO/: Makefile  PbrtLoader.cpp  PbrtLoader.hpp  PlyLoader.cpp  PlyLoader.hpp  tply  tply.cpp
src/Materials/: Glass.cpp  Glass.hpp  Material.cpp  Material.hpp  Matte.cpp  Matte.hpp  Metal.cpp  Metal.hpp  Mirror.cpp  Mirror.hpp  ParamSet.cpp  ParamSet.hpp  Plastic.cpp  Plastic.hpp  Uber.cpp  Uber.hpp
